--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(WavePool)
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")
-add_definitions("-std=c++11 -DDOUBLE_PRECISION")
+add_definitions("-std=c++11 -DDOUBLE_PRECISION -I/usr/local/include")
 
 # Find the SDL2 configuration file
 set(SDL2_DIR ${CMAKE_SOURCE_DIR})
