Added OpenMP threading support, optimised wave function calculation, added support for multiple emission points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(WavePool)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG -D_DEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")
-add_definitions("-std=c++11 -DDOUBLE_PRECISION -I/usr/local/include")
+add_definitions("-std=c++11 -Wall -I/usr/local/include")
 
 # Find the SDL2 configuration file
 set(SDL2_DIR ${CMAKE_SOURCE_DIR})
@@ -15,6 +15,16 @@ find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_package(SDL2 REQUIRED)
 
-include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS})
+string(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "RELEASE" IS_RELEASE)
+if(IS_RELEASE)
+	find_package(OpenMP)
+	if (OPENMP_FOUND)
+		set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+		set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+	endif(OPENMP_FOUND)
+endif(IS_RELEASE)
+
+include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS}
+	${SDL2_INCLUDE_DIRS})
 
 add_subdirectory(src)
