--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(${CMAKE_PROJECT_NAME} utils.cpp framework.cpp image.cpp
-	application.cpp emitter.cpp wavepool.cpp main.cpp)
+	application.cpp emitter.cpp wavepool.cpp colorselect.cpp main.cpp)
 target_link_libraries(${CMAKE_PROJECT_NAME} ${OPENGL_LIBRARIES}
 	${GLUT_LIBRARIES} ${SDL2_LIBRARIES})
 
