Better Build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,19 @@ project(WavePool)
 set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG -D_DEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O3 -g")
+set(PRINT_CHANGES "NO" CACHE BOOL "Whether to print what changes have been
+made when you change something in the application")
+
 add_definitions("-std=c++11 -Wall -I/usr/local/include")
 
-string(COMPARE EQUAL "${CMAKE_BUILD_TYPE}" "" SET_RELEASE)
+string(COMPARE EQUAL "${CMAKE_BUILD_TYPE}" "" EMPTY_BUILD_TYPE)
+if(EMPTY_BUILD_TYPE)
+	set(CMAKE_BUILD_TYPE "RELEASE")
+endif(EMPTY_BUILD_TYPE)
 
-if(SET_RELEASE)
-	set(CMAKE_BUILD_TYPE RELEASE)
-endif(SET_RELEASE)
+if(PRINT_CHANGES)
+	add_definitions("-DPRINT_CHANGES")
+endif(PRINT_CHANGES)
 
 # Find the SDL2 configuration file
 set(SDL2_DIR ${CMAKE_SOURCE_DIR})
@@ -21,14 +27,15 @@ find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_package(SDL2 REQUIRED)
 
-string(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "RELEASE" IS_RELEASE)
-if(IS_RELEASE)
+string(COMPARE EQUAL "${CMAKE_BUILD_TYPE}" "RELEASE" IS_RELEASE)
+string(COMPARE EQUAL "${CMAKE_BUILD_TYPE}" "RELWITHDEBINFO" IS_RWDI)
+if(IS_RELEASE OR IS_RWDI)
 	find_package(OpenMP)
 	if (OPENMP_FOUND)
 		set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 		set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 	endif(OPENMP_FOUND)
-endif(IS_RELEASE)
+endif(IS_RELEASE OR IS_RWDI)
 
 include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS}
 	${SDL2_INCLUDE_DIRS})
